[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_runtime_params"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-runtime-params = "kedro_runtime_params.__main__:main"

[tool.kedro]
package_name = "kedro_runtime_params"
project_name = "Kedro runtime params"
kedro_init_version = "0.19.8"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_runtime_params.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "719915cf441742ca8406139864b5a39e"
